--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -409,6 +409,7 @@ body.is-mobile-app-view {
 	}
 	.section-header.card {
 		box-shadow: none;
+		margin-bottom: 24px;
 		padding: 0;
 
 		.section-header__label-text {
