--- a/client/layout/style.scss
+++ b/client/layout/style.scss
@@ -409,12 +409,17 @@ body.is-mobile-app-view {
 	}
 	.section-header.card {
 		box-shadow: none;
+		margin-bottom: 24px;
 		padding: 0;
 
 		.section-header__label-text {
 			font-size: 1.25rem;
 			font-weight: 500;
 			line-height: 26px;
+		}
+
+		@include breakpoint-deprecated( "<660px" ) {
+			margin: 0 16px;
 		}
 	}
 }
