Align button + make label clickable

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -178,6 +178,8 @@ $brand-display: "SF Pro Display", sans-serif;
 		}
 
 		&__last-update-label {
+			align-items: flex-start;
+
 			label {
 				display: inline-flex;
 				align-items: center;
