Fix button's font size to match other labels.

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -180,6 +180,10 @@ $brand-display: "SF Pro Display", sans-serif;
 		&__last-update-label {
 			align-items: flex-start;
 
+			.components-button {
+				font-size: 0.875rem;
+			}
+
 			label {
 				display: inline-flex;
 				align-items: center;
