--- a/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
+++ b/client/a8c-for-agencies/sections/sites/sites-dashboard/style.scss
@@ -1143,3 +1143,11 @@
 	}
 }
 
+.sites-dashboard .notice-banner {
+	display: none;
+}
+
+.sites-dashboard.preview-hidden .notice-banner {
+	display: flex;
+	margin: 0 64px 24px !important;
+}
