--- a/client/blocks/reader-post-card/style.scss
+++ b/client/blocks/reader-post-card/style.scss
@@ -170,6 +170,7 @@
 
 			@include breakpoint-deprecated( "<660px" ) {
 				flex-direction: column-reverse;
+				gap: 12px;
 			}
 
 			&.reader-post-card__no-excerpt {
