--- a/client/my-sites/stats/stats-module-devices/stats-module-devices.scss
+++ b/client/my-sites/stats/stats-module-devices/stats-module-devices.scss
@@ -17,13 +17,15 @@
 	.pie-chart__legend {
 		flex-direction: row;
 		align-items: center;
+		flex-wrap: wrap;
+		column-gap: 20px;
+		row-gap: 12px;
 		padding: 0 20px;
 
 		.legend-item {
 			flex-direction: row;
 
 			&:not(:first-child) {
-				margin-left: 20px;
 				margin-top: 0;
 			}
 		}
