Add Referrals footer content.

--- a/client/a8c-for-agencies/sections/referrals/primary/commission-overview/style.scss
+++ b/client/a8c-for-agencies/sections/referrals/primary/commission-overview/style.scss
@@ -1,7 +1,10 @@
 
 .commission-overview {
-	.step-section {
-		margin-block: 32px 64px;
+	.commission-overview__section-container {
+		display: flex;
+		flex-direction: column;
+		gap: 40px;
+		margin-block: 32px 0;
 	}
 
 	.commission-overview__heading {
