update background color for sites lists when hovered

--- a/client/sites-dashboard-v2/style.scss
+++ b/client/sites-dashboard-v2/style.scss
@@ -494,6 +494,15 @@
 			.components-button:focus:not(:disabled) {
 				box-shadow: 0 0 0 2px var(--color-primary-light);
 			}
+
+			thead tr.dataviews-view-table__row:hover {
+				background: var(--studio-white);
+			}
+
+			tr.dataviews-view-table__row:hover,
+			ul.dataviews-view-list li:hover {
+				background-color: #f7faff;
+			}
 		}
 
 		.a4a-layout__top-wrapper,
