use cursor: text for main input style for datetime

--- a/client/my-sites/site-monitoring/components/site-logs-toolbar/style.scss
+++ b/client/my-sites/site-monitoring/components/site-logs-toolbar/style.scss
@@ -36,7 +36,7 @@
 		}
 
 		input[type="datetime-local"] {
-			cursor: default;
+			cursor: text;
 			&::-webkit-calendar-picker-indicator {
 				cursor: pointer;
 			}
