--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -115,18 +115,19 @@
 
 		&__sites {
 			> div {
-				.components-checkbox-control {
-					display: inline-block;
-					vertical-align: top;
-				}
+				display: flex;
+				align-items: center;
 
 				label {
-					display: inline-block;
-					vertical-align: top;
-					margin-top: -4px;
+					max-width: calc(100% - 2rem);
 
 					.site-slug {
 						color: var(--studio-gray-50);
+						display: inline-block;
+						white-space: nowrap;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						max-width: 100%;
 					}
 				}
 			}
