--- a/client/blocks/plugins-scheduled-updates/schedule-form.scss
+++ b/client/blocks/plugins-scheduled-updates/schedule-form.scss
@@ -113,6 +113,27 @@
 			box-shadow: 0 0 1px rgba(255, 255, 255, 0.5);
 		}
 
+		&__sites {
+			> div {
+				display: flex;
+				align-items: center;
+
+				label {
+					max-width: calc(100% - 2rem);
+
+					.site-slug {
+						color: var(--studio-gray-50);
+						display: inline-block;
+						white-space: nowrap;
+						overflow: hidden;
+						text-overflow: ellipsis;
+						max-width: 100%;
+					}
+				}
+			}
+
+		}
+
 	}
 
 	.form-field {
