add cursor pointer to site dashboard row style

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -72,6 +72,10 @@
 		tr.dataviews-view-table__row:hover {
 			background-color: #f7faff;
 		}
+
+		tbody tr.dataviews-view-table__row {
+			cursor: pointer;
+		}
 	}
 
 	table.dataviews-view-table thead .dataviews-view-table__row th {
