Hide subtitle when preview pane is open

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -322,7 +322,8 @@
 		}
 
 		.sites-site-thumbnail,
-		.sites-manage-all-domains-button {
+		.sites-manage-all-domains-button,
+		.a4a-layout__header-subtitle {
 			display: none;
 		}
 
