--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -116,6 +116,13 @@
 		}
 	}
 
+	table.dataviews-view-table {
+		table-layout: fixed;
+		@include break-large {
+			width: auto;
+		}
+	}
+
 	table.dataviews-view-table thead .dataviews-view-table__row th {
 		border-bottom-color: var(--color-border-secondary);
 
