fix table widths

--- a/client/sites-dashboard-v2/sites-dataviews/style.scss
+++ b/client/sites-dashboard-v2/sites-dataviews/style.scss
@@ -55,9 +55,9 @@
 		width: 180px;
 	}
 
-	@media (min-width: 2040px) {
+	@include break-wide {
 		.sites-dataviews__site-name {
-			width: 250px;
+			width: 260px;
 		}
 	}
 }
