Align expanding card chevrons with other right-aligned icons

--- a/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
+++ b/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
@@ -33,6 +33,9 @@
 		border: none;
 	}
 
+	.foldable-card__action {
+		right: 8px;
+	}
 	.a4a-migration-offer__title {
 		display: flex;
 		gap: 8px;
