--- a/client/a8c-for-agencies/components/offering/style.scss
+++ b/client/a8c-for-agencies/components/offering/style.scss
@@ -53,6 +53,9 @@
 			border: none;
 		}
 
+		.foldable-card__action {
+			right: 8px;
+		}
 		.a4a-offering-item__button {
 			font-weight: 500;
 		}
