--- a/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
+++ b/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
@@ -36,6 +36,11 @@
 	.foldable-card__action {
 		right: 8px;
 	}
+
+	.foldable-card__expand .gridicon {
+		fill: var(--color-neutral-100);
+	}
+
 	.a4a-migration-offer__title {
 		display: flex;
 		gap: 8px;
