Align checkmarks to the top of accompanying text

--- a/client/a8c-for-agencies/components/offering/style.scss
+++ b/client/a8c-for-agencies/components/offering/style.scss
@@ -83,7 +83,7 @@
 	.a4a-offering-item__card-list-item {
 		color: var(--color-neutral-80);
 		display: flex;
-		align-items: center;
+		align-items: flex-start;
 		font-size: 0.875rem;
 		line-height: 20px;
 	}
