Update font-sizes and line-height values

--- a/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
+++ b/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
@@ -59,9 +59,9 @@
 
 	.a4a-migration-offer__description {
 		color: var(--studio-gray-80);
-		font-size: 1rem;
+		font-size: rem(16px);
 		font-weight: 400;
-		line-height: 1.65;
+		line-height: 24px;
 		margin-block-start: 16px;
 	}
 
