--- a/client/a8c-for-agencies/components/offering/style.scss
+++ b/client/a8c-for-agencies/components/offering/style.scss
@@ -30,7 +30,8 @@
 			.a4a-offering-item__title {
 				color: var(--color-neutral-100);
 				font-weight: 500;
-				font-size: 1rem;
+				font-size: rem(16px);
+				line-height: 20px;
 				margin-inline-start: 10px;
 			}
 		}
@@ -38,7 +39,10 @@
 		.a4a-offering-item__description {
 			color: var(--color-neutral-60);
 			font-weight: 400;
-			font-size: 0.875rem;
+			font-size: rem(14px);
+			line-height: 20px;
+		}
+
 		.foldable-card__header {
 			padding-inline: 24px;
 		}
