--- a/client/me/dotcom-nav-redesign-v2.scss
+++ b/client/me/dotcom-nav-redesign-v2.scss
@@ -22,7 +22,7 @@ body.is-section-me {
 	}
 
 	.has-no-masterbar .layout__content .main {
-		padding-top: 24px;
+		padding: 24px;
 	}
 
 	div.layout.is-global-sidebar-visible {
@@ -50,15 +50,18 @@ body.is-section-me {
 		}
 	}
 
-	.navigation-header::after {
-		content: "";
-		display: block;
-		position: relative;
-		left: calc(-50%);
-		margin: 24px 0;
-		width: 100vw;
-		height: 1px;
-		background: var(--color-border-secondary);
+
+	@media screen and (min-width: 782px) {
+		.navigation-header::after {
+			content: "";
+			display: block;
+			position: relative;
+			left: calc(-1 * (100vw - 100%)/2 - 132px);
+			margin: 24px 0;
+			width: 100vw;
+			height: 1px;
+			background: var(--color-border-secondary);
+		}
 	}
 
 	@media only screen and (max-width: 600px) {
@@ -74,7 +77,7 @@ body.is-section-me {
 	@media only screen and (max-width: 781px) {
 		div.layout.is-global-sidebar-visible {
 			.layout__primary {
-				overflow-x: auto;
+				overflow-x: hidden;
 			}
 		}
 		.layout__primary > div {
