use cursor default on header row

--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -65,6 +65,10 @@
 	}
 
 	.dataviews-wrapper {
+		thead tr.dataviews-view-table__row {
+			cursor: default;
+		}
+
 		thead tr.dataviews-view-table__row:hover {
 			background: var(--studio-white);
 		}
