Highligh selected schedule in cards mode

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -182,7 +182,7 @@ $brand-display: "SF Pro Display", sans-serif;
 			border-top: solid 1px var(--studio-gray-0);
 		}
 
-		&.selected {
+		&.is-selected {
 			background: #f7faff;
 		}
 
