--- a/client/sites-dashboard-v2/dotcom-style.scss
+++ b/client/sites-dashboard-v2/dotcom-style.scss
@@ -262,7 +262,6 @@
 						}
 					}
 					.sidebar__body {
-						padding-top: 24px;
 						.sidebar__menu-link-text {
 							transition: all 100ms ease-out;
 							transition-delay: 120ms;
@@ -282,9 +281,9 @@
 					}
 					.sidebar__footer {
 						flex-direction: row !important;
-						.sidebar__item-help {
-							padding-inline: 0;
-						}
+						padding: 16px;
+						align-items: center;
+						justify-content: center;
 					}
 				}
 			}
