--- a/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
+++ b/client/a8c-for-agencies/components/a4a-migration-offer/style.scss
@@ -61,7 +61,7 @@
 		color: var(--studio-gray-80);
 		font-size: rem(16px);
 		font-weight: 400;
-		line-height: 24px;
+		line-height: 1.5;
 		margin-block-start: 16px;
 	}
 
