Adjust expand and menu cells styles

--- a/client/blocks/plugins-scheduled-updates-multisite/styles.scss
+++ b/client/blocks/plugins-scheduled-updates-multisite/styles.scss
@@ -76,11 +76,17 @@ $brand-display: "SF Pro Display", sans-serif;
 			}
 
 			&.expand {
+				min-width: 2rem;
+				text-align: center;
 				line-height: 1;
 
 				button {
 					margin-top: rem(2px);
 				}
+			}
+
+			&.menu {
+				text-align: center;
 			}
 		}
 
